Added additional readings for priority - Low, Normal, High, Urgent - Revenue (in VRP) maps to Priority (in Route Planner). Priority can now take any non negative integer value and the VRP will give more priority to higher values. We have created the following four priorities which can be customized further by developers extending this application: Urgent = 1000000 High = 1000 Normal = 1 Low = 0

--- a/RoutePlanner_DeveloperTools/Source/ArcLogistics/Properties/Resources.resx
+++ b/RoutePlanner_DeveloperTools/Source/ArcLogistics/Properties/Resources.resx
@@ -1737,6 +1737,14 @@
     <value>Normal</value>
     <comment>Supported OrderPriority.Normal values (separate by ','). Used in import.</comment>
   </data>
+  <data name="OrderPriorityLowSupportedValues" xml:space="preserve">
+    <value>Low</value>
+    <comment>Supported OrderPriority.Low values (separate by ','). Used in import.</comment>
+  </data>
+  <data name="OrderPriorityUrgentSupportedValues" xml:space="preserve">
+    <value>Urgent</value>
+    <comment>Supported OrderPriority.Urgent values (separate by ','). Used in import.</comment>
+  </data>
   <data name="OrderTypeDeliverySupportedValues" xml:space="preserve">
     <value>Delivery</value>
     <comment>Supported OrderType.Delivery values (separate by ','). Used in import.</comment>
